2021-05-15  Bart Schaefer  <schaefer@zsh.org>

	* 48710: Completion/Zsh/Command/_zed, Doc/Zsh/contrib.yo,
	Functions/Misc/zed: add "zed -h" aka "histed", update doc and
	completion; improve compatibility with SH_WORD_SPLIT

	* 48709: Completion/Base/Widget/_complete_help: suppress error
	messages from comptry

	* 48707: Doc/Zsh/contrib.yo, Functions/Zle/zed-set-file-name:
	fix keymap handling when zed invokes read-from-minibuffer

2021-05-06  Peter Stephenson  <p.stephenson@samsung.com>

	* 48787: Src/loop.c, Test/A01grammar.ztst: status was incorrect
	on hard error flagged by condition in "if" without "else".

2021-05-03  dana  <dana@dana.is>

	* unposted (see 48613): Etc/FAQ.yo: Move section 3.31 to 2.8

	* unposted (see 48613): Doc/Zsh/metafaq.yo, Doc/Zsh/roadmap.yo:
	Update http:// FAQ links to https://

	* 48551 (tweaked per 48565, 48629): Doc/Zsh/compat.yo: Add
	disclaimer about POSIX compliance and emulation of other shells

	* 48614 (tweaked per 48630): Doc/Zsh/builtins.yo,
	Doc/Zsh/options.yo, README, Src/builtin.c, Test/B10getopts.ztst:
	Calculate OPTIND according to POSIX_BUILTINS

2021-05-03  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 48767: Doc/Zsh/params.yo: docs: $SECONDS: Clarify what types
	may be set

2021-04-28  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 48702: Completion/Unix/Command/_pandoc: do not use cache,
	support two or more extensions of format, and other fixes

2021-04-21  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 48606 + 48607 + unposted test: Functions/Math/zmathfunc,
	Test/Z02zmathfunc.ztst: zmathfunc: Force arguments to be numbers
	and catch errors.

	* unposted (cf. 48156): Test/Z02zmathfunc.ztst: New test.

	* users/26635 (tweaked):
	Functions/VCS_Info/Backends/VCS_INFO_get_data_hg: vcs_info hg:
	Compute the branch name correctly when get-revision is set and
	check-for-changes is not

2021-04-20  Bart Schaefer  <schaefer@zsh.org>

	* 48638: NEWS: mention TYPESET_TO_UNSET
